--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -8,15 +8,15 @@
   <!-- the classes 'page-header' and 'btn btn-default' create bootstrap components.  -->
   <!-- Check out more components here: http://getbootstrap.com/components/ -->
   <div class="page-header">
-    <h1>YOYO web apps are so cool</h1>
+    <h1>Welcome to HELL</h1>
   </div>
 
   <p id="demo">
-    This is me testing out a lil html file
+    Would you like to see more?????
   </p>
 
   <button class="btn btn-default" type="button" onclick="myFunction()">
-    Try it
+    Click here (not clickbait)
   </button>
 
   <div id="doge-image"/>
